// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Trb Public Guidance Letter > renders from email link 1`] = `
<DocumentFragment>
  <div
    class="grid-container full-width"
    data-testid="gridContainer"
  >
    <nav
      aria-label="Breadcrumbs"
      class="usa-breadcrumb usa-breadcrumb--wrap padding-bottom-0"
      style="background-color: transparent;"
    >
      <ol
        class="usa-breadcrumb__list"
      >
        <li
          class="usa-breadcrumb__list-item"
        >
          <a
            class="text-primary usa-breadcrumb__link"
            href="/trb"
          >
            <span>
              Technical Assistance
            </span>
          </a>
        </li>
        <li
          aria-current="page"
          class="usa-breadcrumb__list-item usa-current"
        >
          <span>
            Guidance letter
          </span>
        </li>
      </ol>
    </nav>
    <h1
      aria-live="polite"
      class="easi-h1 margin-top-6 margin-bottom-1"
      tabindex="-1"
    >
      Guidance letter
    </h1>
    <p
      class="line-height-body-5 font-body-lg text-light margin-top-0 margin-bottom-2"
    >
      This is an guidance letter that was sent to the project team for the request summarized below. If you have any questions about this guidance letter, you may reach out to the TRB at 
      <a
        class="usa-link"
        href="mailto:cms-trb@cms.hhs.gov"
      >
        cms-trb@cms.hhs.gov
      </a>
      .
    </p>
    <button
      class="usa-button usa-button--unstyled display-flex flex-align-center easi-no-print"
      data-testid="button"
      type="button"
    >
      <svg
        class="usa-icon margin-right-1"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
        />
      </svg>
      Download guidance letter as PDF
    </button>
  </div>
  <div
    class="bg-primary-lighter margin-y-6 padding-y-6 trb-guidance-letter-request-summary"
  >
    <div
      class="grid-container full-width"
      data-testid="gridContainer"
    >
      <h2
        class="margin-top-0 margin-bottom-3"
      >
        Request summary
      </h2>
      <div
        class="easi-collapsable-link"
      >
        <div
          class="easi-collapsable-link__content-no-bar"
          id="trb-guidance-letter-request-summary"
        >
          <dl
            class="easi-dl"
          >
            <div
              class="grid-row grid-gap"
              data-testid="grid"
            >
              <div
                class="tablet:grid-col-12 desktop:grid-col-6"
                data-testid="grid"
              >
                <dt>
                  Submission date
                </dt>
                <dd>
                  April 21, 2023
                </dd>
              </div>
              <div
                class="tablet:grid-col-12 desktop:grid-col-6"
                data-testid="grid"
              >
                <dt>
                  Project title
                </dt>
                <dd>
                  Case 7 - Guidance letter in review
                </dd>
              </div>
              <div
                class="tablet:grid-col-12 desktop:grid-col-6"
                data-testid="grid"
              >
                <dt>
                  Requester
                </dt>
                <dd>
                  Adeline Aarons, CMS Wide
                </dd>
              </div>
              <div
                class="tablet:grid-col-12 desktop:grid-col-6"
                data-testid="grid"
              >
                <dt>
                  Request component
                </dt>
                <dd>
                  Center for Medicare
                </dd>
              </div>
              <div
                class="grid-col-12"
                data-testid="grid"
              >
                <dt>
                  What do you need technical assistance with?
                </dt>
                <dd>
                  Something is wrong with my system
                </dd>
              </div>
            </div>
          </dl>
        </div>
        <button
          aria-controls="trb-guidance-letter-request-summary"
          aria-expanded="true"
          class="usa-button usa-button--unstyled display-flex flex-align-center text-bold"
          data-testid="collapsable-link"
          type="button"
        >
          <svg
            class="usa-icon easi-collapsable-link__eye-icon"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46A11.804 11.804 0 0 0 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78 3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
            />
          </svg>
          Hide summary
        </button>
      </div>
    </div>
  </div>
  <div
    class="grid-container full-width"
    data-testid="gridContainer"
  >
    <div>
      <h1
        class="easi-only-print"
      >
        Guidance letter
      </h1>
      <div>
        <p
          class="easi-only-print"
        >
          Thank you for attending the TRB consult session!
        </p>
        <div
          class="easi-section margin-top-5"
          data-testid="section-wrapper"
        >
          <h2
            class="margin-bottom-1"
          >
            What we heard
          </h2>
          <div
            class="easi-toast easi-toast-viewer margin-top-1"
          >
            <div>
              <div
                class="toastui-editor-contents"
                style="overflow-wrap: break-word;"
              >
                <p
                  data-nodeid="1"
                >
                  Talked about stuff
                </p>
                

              </div>
            </div>
          </div>
        </div>
        <div
          class="easi-section margin-top-5"
          data-testid="section-wrapper"
        >
          <h2
            class="margin-bottom-1"
          >
            Guidance and insights
          </h2>
          <div
            class="margin-top-4"
          >
            <div>
              <h3
                class="margin-bottom-05"
                id="categoryHeading"
              >
                Requirements
              </h3>
              <p
                class="margin-top-05 margin-bottom-3 line-height-body-5"
              >
                A requirement stipulates that the project team must implement this change or solution in order to maintain their LCID and continue receiving funding.
              </p>
              <div
                class="usa-alert usa-alert--info usa-alert--slim margin-top-neg-1 margin-bottom-4"
                data-testid="alert"
              >
                <div
                  class="usa-alert__body"
                >
                  <p
                    class="usa-alert__text"
                  >
                    This guidance letter does not have any guidance categorized as a requirement.
                  </p>
                </div>
              </div>
            </div>
            <div>
              <h3
                class="margin-bottom-05"
                id="categoryHeading"
              >
                Recommendations
              </h3>
              <p
                class="margin-top-05 margin-bottom-3 line-height-body-5"
              >
                A recommendation indicates that the project team should strongly consider implementing this change, as it will benefit both the project team and CMS.
              </p>
              <ul
                aria-labelledby="categoryHeading"
                class="usa-list usa-list--unstyled"
              >
                <li
                  class="margin-bottom-3"
                  data-testid="insights_list-item"
                >
                  <div
                    class="bg-base-lightest padding-top-2 padding-bottom-105 padding-left-105 padding-right-3 display-flex padding-x-5"
                  >
                    <div
                      class="width-full padding-bottom-2 padding-top-1"
                    >
                      <h4
                        class="margin-top-0 margin-bottom-2"
                      >
                        Recommendation 1
                      </h4>
                      <div
                        class="easi-toast easi-toast-viewer margin-top-1 font-body-md text-light line-height-body-4"
                      >
                        <div>
                          <div
                            class="toastui-editor-contents"
                            style="overflow-wrap: break-word;"
                          >
                            <p
                              data-nodeid="3"
                            >
                              This is the recommendation text
                            </p>
                            

                          </div>
                        </div>
                      </div>
                      <p
                        class="margin-bottom-0 margin-top-2 font-body-xs"
                      >
                        Resources
                      </p>
                      <ul
                        class="usa-list usa-list--unstyled margin-bottom-05"
                      >
                        <li>
                          <a
                            aria-label="Open easi.cms.gov in a new tab"
                            class="usa-link"
                            href="/"
                            rel="noopener noreferrer"
                            target="_blank"
                          >
                            easi.cms.gov
                          </a>
                        </li>
                        <li>
                          <a
                            aria-label="Open https://google.com in a new tab"
                            class="usa-link usa-link--external"
                            href="https://google.com/"
                            rel="noopener noreferrer"
                            target="_blank"
                          >
                            google.com
                          </a>
                        </li>
                      </ul>
                    </div>
                  </div>
                </li>
                <li
                  class="margin-bottom-3"
                  data-testid="insights_list-item"
                >
                  <div
                    class="bg-base-lightest padding-top-2 padding-bottom-105 padding-left-105 padding-right-3 display-flex padding-x-5"
                  >
                    <div
                      class="width-full padding-bottom-2 padding-top-1"
                    >
                      <h4
                        class="margin-top-0 margin-bottom-2"
                      >
                        Recommendation 2
                      </h4>
                      <div
                        class="easi-toast easi-toast-viewer margin-top-1 font-body-md text-light line-height-body-4"
                      >
                        <div>
                          <div
                            class="toastui-editor-contents"
                            style="overflow-wrap: break-word;"
                          >
                            <p
                              data-nodeid="5"
                            >
                              This is the recommendation text
                            </p>
                            

                          </div>
                        </div>
                      </div>
                      <p
                        class="margin-bottom-0 margin-top-2 font-body-xs"
                      >
                        Resources
                      </p>
                      <ul
                        class="usa-list usa-list--unstyled margin-bottom-05"
                      >
                        <li>
                          <a
                            aria-label="Open easi.cms.gov in a new tab"
                            class="usa-link"
                            href="/"
                            rel="noopener noreferrer"
                            target="_blank"
                          >
                            easi.cms.gov
                          </a>
                        </li>
                        <li>
                          <a
                            aria-label="Open cms.gov in a new tab"
                            class="usa-link usa-link--external"
                            href="https://cms.gov/"
                            rel="noopener noreferrer"
                            target="_blank"
                          >
                            cms.gov
                          </a>
                        </li>
                      </ul>
                    </div>
                  </div>
                </li>
                <li
                  class="margin-bottom-3"
                  data-testid="insights_list-item"
                >
                  <div
                    class="bg-base-lightest padding-top-2 padding-bottom-105 padding-left-105 padding-right-3 display-flex padding-x-5"
                  >
                    <div
                      class="width-full padding-bottom-2 padding-top-1"
                    >
                      <h4
                        class="margin-top-0 margin-bottom-2"
                      >
                        Recommendation 3
                      </h4>
                      <div
                        class="easi-toast easi-toast-viewer margin-top-1 font-body-md text-light line-height-body-4"
                      >
                        <div>
                          <div
                            class="toastui-editor-contents"
                            style="overflow-wrap: break-word;"
                          >
                            <p
                              data-nodeid="7"
                            >
                              This is the recommendation text
                            </p>
                            

                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
            <div>
              <h3
                class="margin-bottom-05"
                id="categoryHeading"
              >
                Considerations
              </h3>
              <p
                class="margin-top-05 margin-bottom-3 line-height-body-5"
              >
                A consideration suggests that the project team should evaluate this option, but it will not significantly impact their system or CMS.
              </p>
              <div
                class="usa-alert usa-alert--info usa-alert--slim margin-top-neg-1 margin-bottom-4"
                data-testid="alert"
              >
                <div
                  class="usa-alert__body"
                >
                  <p
                    class="usa-alert__text"
                  >
                    This guidance letter does not have any guidance categorized as a consideration.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="easi-section margin-top-5"
          data-testid="section-wrapper"
        >
          <h2
            class="margin-bottom-1"
          >
            Next steps
          </h2>
          <p
            class="text-bold margin-top-4 margin-bottom-1"
          >
            Next steps
          </p>
          <p
            class="margin-top-1 line-height-body-5"
          >
            Not specified yet
          </p>
          <p
            class="text-bold margin-top-3 margin-bottom-1"
          >
            Should the team return for a follow-up session?
          </p>
          <p
            class="margin-top-1 line-height-body-5"
          >
            Not necessary
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-container full-width"
    data-testid="gridContainer"
  >
    <div
      class="grid-row grid-gap"
      data-testid="grid"
    >
      <div
        class="tablet:grid-col-12 desktop:grid-col-6"
        data-testid="grid"
      >
        <div
          class="usa-summary-box margin-top-6"
          data-testid="summary-box"
        >
          <div
            class="usa-summary-box__body"
          >
            <h3
              class="usa-summary-box__heading"
            >
              Have questions about this guidance letter?
            </h3>
            <div
              class="usa-summary-box__text"
            >
              Reach out to the TRB at 
              <a
                class="usa-link"
                href="mailto:cms-trb@cms.hhs.gov"
              >
                cms-trb@cms.hhs.gov
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Trb Public Guidance Letter > renders from task list link 1`] = `
<DocumentFragment>
  <div
    class="grid-container full-width"
    data-testid="gridContainer"
  >
    <nav
      aria-label="Breadcrumbs"
      class="usa-breadcrumb usa-breadcrumb--wrap padding-bottom-0"
      style="background-color: transparent;"
    >
      <ol
        class="usa-breadcrumb__list"
      >
        <li
          class="usa-breadcrumb__list-item"
        >
          <a
            class="text-primary usa-breadcrumb__link"
            href="/trb"
          >
            <span>
              Technical Assistance
            </span>
          </a>
        </li>
        <li
          class="usa-breadcrumb__list-item"
        >
          <a
            class="text-primary usa-breadcrumb__link"
            href="/trb/task-list/d8ebedca-0031-4ccd-9690-37390726c50e"
          >
            <span>
              Task list
            </span>
          </a>
        </li>
        <li
          aria-current="page"
          class="usa-breadcrumb__list-item usa-current"
        >
          <span>
            Guidance letter
          </span>
        </li>
      </ol>
    </nav>
    <h1
      aria-live="polite"
      class="easi-h1 margin-top-6 margin-bottom-1"
      tabindex="-1"
    >
      Guidance letter
    </h1>
    <a
      class="usa-link"
      href="/trb/task-list/d8ebedca-0031-4ccd-9690-37390726c50e"
    >
      <svg
        class="usa-icon margin-right-05 margin-bottom-2px text-tbottom"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
        />
      </svg>
      Return to task list
    </a>
    <p
      class="line-height-body-5 font-body-lg text-light margin-top-6 margin-bottom-105"
    >
      Thank you for attending the TRB consult session!
    </p>
    <button
      class="usa-button usa-button--unstyled display-flex flex-align-center easi-no-print"
      data-testid="button"
      type="button"
    >
      <svg
        class="usa-icon margin-right-1"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
        />
      </svg>
      Download guidance letter as PDF
    </button>
  </div>
  <div
    class="grid-container full-width"
    data-testid="gridContainer"
  >
    <div>
      <h1
        class="easi-only-print"
      >
        Guidance letter
      </h1>
      <div>
        <p
          class="easi-only-print"
        >
          Thank you for attending the TRB consult session!
        </p>
        <div
          class="easi-section margin-top-5"
          data-testid="section-wrapper"
        >
          <h2
            class="margin-bottom-1"
          >
            What we heard
          </h2>
          <div
            class="easi-toast easi-toast-viewer margin-top-1"
          >
            <div>
              <div
                class="toastui-editor-contents"
                style="overflow-wrap: break-word;"
              >
                <p
                  data-nodeid="9"
                >
                  Talked about stuff
                </p>
                

              </div>
            </div>
          </div>
        </div>
        <div
          class="easi-section margin-top-5"
          data-testid="section-wrapper"
        >
          <h2
            class="margin-bottom-1"
          >
            Guidance and insights
          </h2>
          <div
            class="margin-top-4"
          >
            <div>
              <h3
                class="margin-bottom-05"
                id="categoryHeading"
              >
                Requirements
              </h3>
              <p
                class="margin-top-05 margin-bottom-3 line-height-body-5"
              >
                A requirement stipulates that the project team must implement this change or solution in order to maintain their LCID and continue receiving funding.
              </p>
              <div
                class="usa-alert usa-alert--info usa-alert--slim margin-top-neg-1 margin-bottom-4"
                data-testid="alert"
              >
                <div
                  class="usa-alert__body"
                >
                  <p
                    class="usa-alert__text"
                  >
                    This guidance letter does not have any guidance categorized as a requirement.
                  </p>
                </div>
              </div>
            </div>
            <div>
              <h3
                class="margin-bottom-05"
                id="categoryHeading"
              >
                Recommendations
              </h3>
              <p
                class="margin-top-05 margin-bottom-3 line-height-body-5"
              >
                A recommendation indicates that the project team should strongly consider implementing this change, as it will benefit both the project team and CMS.
              </p>
              <ul
                aria-labelledby="categoryHeading"
                class="usa-list usa-list--unstyled"
              >
                <li
                  class="margin-bottom-3"
                  data-testid="insights_list-item"
                >
                  <div
                    class="bg-base-lightest padding-top-2 padding-bottom-105 padding-left-105 padding-right-3 display-flex padding-x-5"
                  >
                    <div
                      class="width-full padding-bottom-2 padding-top-1"
                    >
                      <h4
                        class="margin-top-0 margin-bottom-2"
                      >
                        Recommendation 1
                      </h4>
                      <div
                        class="easi-toast easi-toast-viewer margin-top-1 font-body-md text-light line-height-body-4"
                      >
                        <div>
                          <div
                            class="toastui-editor-contents"
                            style="overflow-wrap: break-word;"
                          >
                            <p
                              data-nodeid="11"
                            >
                              This is the recommendation text
                            </p>
                            

                          </div>
                        </div>
                      </div>
                      <p
                        class="margin-bottom-0 margin-top-2 font-body-xs"
                      >
                        Resources
                      </p>
                      <ul
                        class="usa-list usa-list--unstyled margin-bottom-05"
                      >
                        <li>
                          <a
                            aria-label="Open easi.cms.gov in a new tab"
                            class="usa-link"
                            href="/"
                            rel="noopener noreferrer"
                            target="_blank"
                          >
                            easi.cms.gov
                          </a>
                        </li>
                        <li>
                          <a
                            aria-label="Open https://google.com in a new tab"
                            class="usa-link usa-link--external"
                            href="https://google.com/"
                            rel="noopener noreferrer"
                            target="_blank"
                          >
                            google.com
                          </a>
                        </li>
                      </ul>
                    </div>
                  </div>
                </li>
                <li
                  class="margin-bottom-3"
                  data-testid="insights_list-item"
                >
                  <div
                    class="bg-base-lightest padding-top-2 padding-bottom-105 padding-left-105 padding-right-3 display-flex padding-x-5"
                  >
                    <div
                      class="width-full padding-bottom-2 padding-top-1"
                    >
                      <h4
                        class="margin-top-0 margin-bottom-2"
                      >
                        Recommendation 2
                      </h4>
                      <div
                        class="easi-toast easi-toast-viewer margin-top-1 font-body-md text-light line-height-body-4"
                      >
                        <div>
                          <div
                            class="toastui-editor-contents"
                            style="overflow-wrap: break-word;"
                          >
                            <p
                              data-nodeid="13"
                            >
                              This is the recommendation text
                            </p>
                            

                          </div>
                        </div>
                      </div>
                      <p
                        class="margin-bottom-0 margin-top-2 font-body-xs"
                      >
                        Resources
                      </p>
                      <ul
                        class="usa-list usa-list--unstyled margin-bottom-05"
                      >
                        <li>
                          <a
                            aria-label="Open easi.cms.gov in a new tab"
                            class="usa-link"
                            href="/"
                            rel="noopener noreferrer"
                            target="_blank"
                          >
                            easi.cms.gov
                          </a>
                        </li>
                        <li>
                          <a
                            aria-label="Open cms.gov in a new tab"
                            class="usa-link usa-link--external"
                            href="https://cms.gov/"
                            rel="noopener noreferrer"
                            target="_blank"
                          >
                            cms.gov
                          </a>
                        </li>
                      </ul>
                    </div>
                  </div>
                </li>
                <li
                  class="margin-bottom-3"
                  data-testid="insights_list-item"
                >
                  <div
                    class="bg-base-lightest padding-top-2 padding-bottom-105 padding-left-105 padding-right-3 display-flex padding-x-5"
                  >
                    <div
                      class="width-full padding-bottom-2 padding-top-1"
                    >
                      <h4
                        class="margin-top-0 margin-bottom-2"
                      >
                        Recommendation 3
                      </h4>
                      <div
                        class="easi-toast easi-toast-viewer margin-top-1 font-body-md text-light line-height-body-4"
                      >
                        <div>
                          <div
                            class="toastui-editor-contents"
                            style="overflow-wrap: break-word;"
                          >
                            <p
                              data-nodeid="15"
                            >
                              This is the recommendation text
                            </p>
                            

                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
            <div>
              <h3
                class="margin-bottom-05"
                id="categoryHeading"
              >
                Considerations
              </h3>
              <p
                class="margin-top-05 margin-bottom-3 line-height-body-5"
              >
                A consideration suggests that the project team should evaluate this option, but it will not significantly impact their system or CMS.
              </p>
              <div
                class="usa-alert usa-alert--info usa-alert--slim margin-top-neg-1 margin-bottom-4"
                data-testid="alert"
              >
                <div
                  class="usa-alert__body"
                >
                  <p
                    class="usa-alert__text"
                  >
                    This guidance letter does not have any guidance categorized as a consideration.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="easi-section margin-top-5"
          data-testid="section-wrapper"
        >
          <h2
            class="margin-bottom-1"
          >
            Next steps
          </h2>
          <p
            class="text-bold margin-top-4 margin-bottom-1"
          >
            Next steps
          </p>
          <p
            class="margin-top-1 line-height-body-5"
          >
            Not specified yet
          </p>
          <p
            class="text-bold margin-top-3 margin-bottom-1"
          >
            Should the team return for a follow-up session?
          </p>
          <p
            class="margin-top-1 line-height-body-5"
          >
            Not necessary
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-container full-width"
    data-testid="gridContainer"
  >
    <div
      class="grid-row grid-gap"
      data-testid="grid"
    >
      <div
        class="tablet:grid-col-12 desktop:grid-col-6"
        data-testid="grid"
      >
        <div
          class="usa-summary-box margin-top-6"
          data-testid="summary-box"
        >
          <div
            class="usa-summary-box__body"
          >
            <h3
              class="usa-summary-box__heading"
            >
              Have questions about this guidance letter?
            </h3>
            <div
              class="usa-summary-box__text"
            >
              Reach out to the TRB at 
              <a
                class="usa-link"
                href="mailto:cms-trb@cms.hhs.gov"
              >
                cms-trb@cms.hhs.gov
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <a
      class="usa-link display-inline-block margin-top-5"
      href="/trb/task-list/d8ebedca-0031-4ccd-9690-37390726c50e"
    >
      <svg
        class="usa-icon margin-right-05 margin-bottom-2px text-tbottom"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
        />
      </svg>
      Return to task list
    </a>
  </div>
</DocumentFragment>
`;
